@@ -2,6 +2,8 @@ master:
  - `trash-empty --help` now shows only the command basename and not the full
    path to the command.
  - Now `trash-empty` honors multiple --trash-dir options
+ - trash-empty learnt the hidden option --print-time and now uses TRASH_DATE
+   environment variable if present
 
 0.21.5.25:
  - now trash-put honors the -i option (also the --interactive one)
